header menü kısmı düzeltildi...

--- a/app/templates_for_new_theme/_header_section.html
+++ b/app/templates_for_new_theme/_header_section.html
@@ -50,11 +50,13 @@
                         <!-- / header top left -->
                         <div class="aa-header-top-right">
                             <ul class="aa-head-top-nav-right">
-                                <li>
-                                    <a href='{% url "cart" %}'><i class="fa fa-shopping-cart fa-navbar-cart"></i> <span
-                                            id="cart-count-badge" class='badge'>{{ request.session.cart_item_count }}</span></a>
-                                </li>
-                                <li class="hidden-xs"><a href="checkout.html">Alışverişi Tamamla</a></li>
+{#                                <li>#}
+{#                                    <a href='{% url "cart" %}'><i class="fa fa-shopping-cart fa-navbar-cart"></i> <span#}
+{#                                            id="cart-count-badge" class='badge'>{{ request.session.cart_item_count }}</span></a>#}
+{#                                </li>#}
+                            {% if request.session.cart_item_count > 0 %}
+                                <li class="hidden-xs"><a href="{% url 'checkout' %}">Alışverişi Tamamla</a></li>
+                            {% endif %}
                             {% if request.user.is_authenticated %}
                                 <li><a href="{% url 'orders' %}">Siparişlerim</a></li>
                                 <li><a href="{% url 'auth_logout' %}">Çıkış</a></li>
@@ -93,42 +95,42 @@
                         <!-- / logo  -->
                         <!-- cart box -->
                         <div class="aa-cartbox">
-                            <a class="aa-cart-link" href="#">
+                            <a class="aa-cart-link" href='{% url "cart" %}'>
                                 <span class="fa fa-shopping-basket"></span>
-                                <span class="aa-cart-title">SHOPPING CART</span>
-                                <span class="aa-cart-notify">2</span>
+                                <span class="aa-cart-title">SEPETİM</span>
+                                <span class="aa-cart-notify">{{ request.session.cart_item_count }}</span>
                             </a>
-                            <div class="aa-cartbox-summary">
-                                <ul>
-                                    <li>
-                                        <a class="aa-cartbox-img" href="#"><img src="{% static 'img/woman-small-2.jpg' %}"
-                                                                                alt="img"></a>
-                                        <div class="aa-cartbox-info">
-                                            <h4><a href="#">Product Name</a></h4>
-                                            <p>1 x $250</p>
-                                        </div>
-                                        <a class="aa-remove-product" href="#"><span class="fa fa-times"></span></a>
-                                    </li>
-                                    <li>
-                                        <a class="aa-cartbox-img" href="#"><img src="{% static 'img/woman-small-1.jpg' %}"
-                                                                                alt="img"></a>
-                                        <div class="aa-cartbox-info">
-                                            <h4><a href="#">Product Name</a></h4>
-                                            <p>1 x $250</p>
-                                        </div>
-                                        <a class="aa-remove-product" href="#"><span class="fa fa-times"></span></a>
-                                    </li>
-                                    <li>
-                      <span class="aa-cartbox-total-title">
-                        Total
-                      </span>
-                                        <span class="aa-cartbox-total-price">
-                        $500
-                      </span>
-                                    </li>
-                                </ul>
-                                <a class="aa-cartbox-checkout aa-primary-btn" href="checkout.html">Checkout</a>
-                            </div>
+{#                            <div class="aa-cartbox-summary">#}
+{#                                <ul>#}
+{#                                    <li>#}
+{#                                        <a class="aa-cartbox-img" href="#"><img src="{% static 'img/woman-small-2.jpg' %}"#}
+{#                                                                                alt="img"></a>#}
+{#                                        <div class="aa-cartbox-info">#}
+{#                                            <h4><a href="#">Product Name</a></h4>#}
+{#                                            <p>1 x $250</p>#}
+{#                                        </div>#}
+{#                                        <a class="aa-remove-product" href="#"><span class="fa fa-times"></span></a>#}
+{#                                    </li>#}
+{#                                    <li>#}
+{#                                        <a class="aa-cartbox-img" href="#"><img src="{% static 'img/woman-small-1.jpg' %}"#}
+{#                                                                                alt="img"></a>#}
+{#                                        <div class="aa-cartbox-info">#}
+{#                                            <h4><a href="#">Product Name</a></h4>#}
+{#                                            <p>1 x $250</p>#}
+{#                                        </div>#}
+{#                                        <a class="aa-remove-product" href="#"><span class="fa fa-times"></span></a>#}
+{#                                    </li>#}
+{#                                    <li>#}
+{#                      <span class="aa-cartbox-total-title">#}
+{#                        Total#}
+{#                      </span>#}
+{#                                        <span class="aa-cartbox-total-price">#}
+{#                        $500#}
+{#                      </span>#}
+{#                                    </li>#}
+{#                                </ul>#}
+{#                                <a class="aa-cartbox-checkout aa-primary-btn" href="checkout.html">Checkout</a>#}
+{#                            </div>#}
                         </div>
                         <!-- / cart box -->
                         <!-- search box -->
