--- a/app/templates_for_new_theme/_footer_section.html
+++ b/app/templates_for_new_theme/_footer_section.html
@@ -11,26 +11,26 @@
                         <div class="row">
                             <div class="col-md-3 col-sm-6">
                                 <div class="aa-footer-widget">
-                                    <h3>Main Menu</h3>
+                                    <h3>istebu.com</h3>
                                     <ul class="aa-footer-nav">
-                                        <li><a href="#">Home</a></li>
-                                        <li><a href="#">Our Services</a></li>
-                                        <li><a href="#">Our Products</a></li>
-                                        <li><a href="#">About Us</a></li>
-                                        <li><a href="#">Contact Us</a></li>
+                                        <li><a href="#">Hakkımızda</a></li>
+                                        <li><a href="#">Bizden Haberler</a></li>
+                                        <li><a href="#">Güvenli Alışveriş</a></li>
+                                        <li><a href="#">Gizlilik Politikamız</a></li>
+                                        <li><a href="#">İletişim</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
                                 <div class="aa-footer-widget">
                                     <div class="aa-footer-widget">
-                                        <h3>Knowledge Base</h3>
+                                        <h3>Sipariş</h3>
                                         <ul class="aa-footer-nav">
-                                            <li><a href="#">Delivery</a></li>
-                                            <li><a href="#">Returns</a></li>
-                                            <li><a href="#">Services</a></li>
-                                            <li><a href="#">Discount</a></li>
-                                            <li><a href="#">Special Offer</a></li>
+                                            <li><a href="#">Sipariş Takibi</a></li>
+                                            <li><a href="#">Sepetim</a></li>
+                                            <li><a href="#">Kampanyalar</a></li>
+                                            <li><a href="#">Fırsatlar</a></li>
+                                            <li><a href="#">Özel Ürünler</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -38,12 +38,12 @@
                             <div class="col-md-3 col-sm-6">
                                 <div class="aa-footer-widget">
                                     <div class="aa-footer-widget">
-                                        <h3>Useful Links</h3>
+                                        <h3>Yardım</h3>
                                         <ul class="aa-footer-nav">
-                                            <li><a href="#">Site Map</a></li>
-                                            <li><a href="#">Search</a></li>
-                                            <li><a href="#">Advanced Search</a></li>
-                                            <li><a href="#">Suppliers</a></li>
+                                            <li><a href="#">Müşteri Hizmetleri</a></li>
+                                            <li><a href="#">Sık Sorulan Sorular</a></li>
+                                            <li><a href="#">Arıza Formu</a></li>
+                                            <li><a href="#">İade Formu</a></li>
                                             <li><a href="#">FAQ</a></li>
                                         </ul>
                                     </div>
@@ -52,17 +52,17 @@
                             <div class="col-md-3 col-sm-6">
                                 <div class="aa-footer-widget">
                                     <div class="aa-footer-widget">
-                                        <h3>Contact Us</h3>
+                                        <h3>Bize Ulaşın</h3>
                                         <address>
-                                            <p> 25 Astor Pl, NY 10003, USA</p>
-                                            <p><span class="fa fa-phone"></span>+1 212-982-4589</p>
-                                            <p><span class="fa fa-envelope"></span>dailyshop@gmail.com</p>
+                                            <p> Perpa Ticaret Merkezi A Blok Kat:4-5 No:95-97 Şişli/İSTANBUL</p>
+                                            <p><span class="fa fa-phone"></span>(212) - 220 9069</p>
+                                            <p><span class="fa fa-envelope"></span>info@istebu.com</p>
                                         </address>
                                         <div class="aa-footer-social">
-                                            <a href="#"><span class="fa fa-facebook"></span></a>
-                                            <a href="#"><span class="fa fa-twitter"></span></a>
-                                            <a href="#"><span class="fa fa-google-plus"></span></a>
-                                            <a href="#"><span class="fa fa-youtube"></span></a>
+                                            <a href="https://www.facebook.com/ishtebu"><span class="fa fa-facebook"></span></a>
+                                            <a href="https://twitter.com/ishtebu"><span class="fa fa-twitter"></span></a>
+{#                                            <a href="#"><span class="fa fa-google-plus"></span></a>#}
+{#                                            <a href="#"><span class="fa fa-youtube"></span></a>#}
                                         </div>
                                     </div>
                                 </div>
