footer daki linkler eklendi, static_pages applikasyonu eklendi.

--- a/app/templates_for_new_theme/_footer_section.html
+++ b/app/templates_for_new_theme/_footer_section.html
@@ -13,7 +13,7 @@
                                 <div class="aa-footer-widget">
                                     <h3>istebu.com</h3>
                                     <ul class="aa-footer-nav">
-                                        <li><a href="#">Hakkımızda</a></li>
+                                        <li><a href="{% url 'static_page_detail' slug='hakkimizda' %}">Hakkımızda</a></li>
                                         <li><a href="#">Bizden Haberler</a></li>
                                         <li><a href="#">Güvenli Alışveriş</a></li>
                                         <li><a href="#">Gizlilik Politikamız</a></li>
