1- ) price filter uygulanınca searchbox, kategori ve tag seçimi yapılmışsa kaybolmaması sağlandı. 2- ) product_detail  sayfasında product description 'da autoescape off yapıldı... 3- ) kategori linklerine tıklanınca categori detay sayfasına değil product list sayfasına yönelmesi sağlandı.

--- a/app/templates_for_new_theme/products/_sidebar.html
+++ b/app/templates_for_new_theme/products/_sidebar.html
@@ -53,20 +53,17 @@
                                     <input id="skip-value-upper-input" type="hidden"
                                            name="{{ filter_form.max_price.name }}"
                                            value="{{ filter_form.max_price.value }}">
-    {#                                <input type='hidden' name='q' value='{{ request.GET.q }}'/>#}
-    {#                                <input type='submit' value='Apply Filter' class='btn btn-default'>#}
-    {#                                <a href="{% url 'products:products' %}?min_price={{ minimum_price }}&max_price={{ maximum_price }}&{{ request.GET.urlencode }}">#}
+                                    {% if request.GET.q%}
+                                       <input type='hidden' name='q' value='{{ request.GET.q }}'/>
+                                    {% endif %}
+                                    {% if request.GET.category%}
+                                       <input type='hidden' name='category' value='{{ request.GET.category }}'/>
+                                    {% endif %}
                                     <button id="filter-btn" class="aa-filter-btn" type="submit">Filtrele</button>
     {#                                </a>#}
                                 </form>
                                 </br>
-                                <div class="row" align="center">
-                                    <a href="{% url 'products:products' %}">
-                                        <button class="aa-filter-btn"
-                                                style="width: 100%; height: 2.2em; font-size: large"
-                                                type="submit">Filtreleri Temizle</button>
-                                    </a>
-                                </div>
+
                                 <input id='minrange' type="hidden" name="min_price" value="{{ minimum_price }}">
                                 <input id='maxrange' type="hidden" name="max_price" value="{{ maximum_price }}">
                                 <input id='minsetvalue' type="hidden" name="minimum_set_price_value" value="{{ minimum_set_price_value }}">
@@ -75,6 +72,13 @@
 
                         </div>
                     {% endif %}
+                    <div class="row" align="center">
+                        <a href="{% url 'products:products' %}">
+                            <button class="aa-filter-btn"
+                                    style="width: 100%; height: 2.2em; font-size: large"
+                                    type="submit">Filtreleri Temizle</button>
+                        </a>
+                    </div>
 
 {#                    <!-- single sidebar -->#}
 {#                    <div class="aa-sidebar-widget">#}
