--- a/app/templates_for_new_theme/products/product_detail.html
+++ b/app/templates_for_new_theme/products/product_detail.html
@@ -158,7 +158,9 @@
                         <!-- Tab panes -->
                         <div class="tab-content">
                             <div class="tab-pane fade in active" id="description">
+                                {% autoescape off %}
                                 <p>{{ object.description }}</p>
+                                {% endautoescape %}
                             </div>
                         </div>
                     </div>
