--- a/app/templates_for_new_theme/_head_css.html
+++ b/app/templates_for_new_theme/_head_css.html
@@ -23,6 +23,9 @@
 <!-- Main style sheet -->
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
+<!-- Custom style sheet -->
+<link href="{% static 'css/custom.css' %}" rel="stylesheet">
+
 <!-- Google Font -->
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
