--- a/app/templates_for_new_theme/products/product_detail.html
+++ b/app/templates_for_new_theme/products/product_detail.html
@@ -124,7 +124,9 @@
                                         </span>
                                         <p class="aa-product-avilability">Stok Durumu: <span>10+</span></p>
                                     </div>
-                                    <p>{{ object.description|truncatechars:150 }}</p>
+{#                                    {% autoescape off %}#}
+{#                                        <p>{{ object.description|truncatechars:150 }}</p>#}
+{#                                    {% endautoescape %}#}
                                     <div class="aa-prod-quantity">
                                         <form action="">
                                             <select id="" name="">
