javasript olarak add to cart ve cart view'da update cart fonksiyonları çalışır hale getirildi...

--- a/app/templates_for_new_theme/__base.html
+++ b/app/templates_for_new_theme/__base.html
@@ -78,7 +78,9 @@
 {% include '_login_modal_form.html' %}
 {% include '_javascript_section.html' %}
 {##}
-{% include "javascript.html" %}
+{#{% include "javascript.html" %}#}
+{% block custom_javascripts %}
+{% endblock %}
 
 <script>
     $(document).ready(function () {
