--- a/app/templates_for_new_theme/_javascript_section.html
+++ b/app/templates_for_new_theme/_javascript_section.html
@@ -1,22 +1,52 @@
 {% load staticfiles %}
 
 <!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="{% static 'js/bootstrap.js' %}"></script>
-<!-- SmartMenus jQuery plugin -->
-<script type="text/javascript" src="{% static 'js/jquery.smartmenus.js' %}"></script>
-<!-- SmartMenus jQuery Bootstrap Addon -->
-<script type="text/javascript" src="{% static 'js/jquery.smartmenus.bootstrap.js' %}"></script>
-<!-- To Slider JS -->
-<script src="{% static 'js/sequence.js' %}"></script>
-<script src="{% static 'js/sequence-theme.modern-slide-in.js' %}"></script>
-<!-- Product view slider -->
-<script type="text/javascript" src="{% static 'js/jquery.simpleGallery.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/jquery.simpleLens.js' %}"></script>
-<!-- slick slider -->
-<script type="text/javascript" src="{% static 'js/slick.js' %}"></script>
-<!-- Price picker slider -->
-<script type="text/javascript" src="{% static 'js/nouislider.js' %}"></script>
+{#<!-- SmartMenus jQuery plugin -->#}
+{#<script type="text/javascript" src="{% static 'js/jquery.smartmenus.js' %}"></script>#}
+{#<!-- SmartMenus jQuery Bootstrap Addon -->#}
+{#<script type="text/javascript" src="{% static 'js/jquery.smartmenus.bootstrap.js' %}"></script>#}
+{#<!-- To Slider JS -->#}
+{#<script src="{% static 'js/sequence.js' %}"></script>#}
+{#<script src="{% static 'js/sequence-theme.modern-slide-in.js' %}"></script>#}
+{#<!-- Product view slider -->#}
+{#<script type="text/javascript" src="{% static 'js/jquery.simpleGallery.js' %}"></script>#}
+{#<script type="text/javascript" src="{% static 'js/jquery.simpleLens.js' %}"></script>#}
+{#<!-- slick slider -->#}
+{#<script type="text/javascript" src="{% static 'js/slick.js' %}"></script>#}
+{#<!-- Price picker slider -->#}
+{#<script type="text/javascript" src="{% static 'js/nouislider.js' %}"></script>#}
 <!-- Custom js -->
 <script src="{% static 'js/custom.js' %}"></script>
+<!-- Custom message js -->
+<script src="{% static 'js/custom_message.js' %}"></script>
+
+
+<script>
+
+    function updateCartItemCount() {
+        var badge = $("#cart-count-badge");
+
+        $.ajax({
+            type: "GET",
+            url: "{% url 'item_count' %}",
+            success: function (data) {
+                badge.text(data.count);
+                console.log(data.count);
+            },
+            error: function (response, error) {
+                console.log(response);
+                console.log(error);
+            }
+
+        })
+
+    }
+    $(document).ready(function () {
+
+        updateCartItemCount()
+    })
+
+</script>
