--- a/app/templates_for_new_theme/products/product_list.html
+++ b/app/templates_for_new_theme/products/product_list.html
@@ -8,6 +8,83 @@
 {% endblock %}
 
 
+<script>
+    {% block jquery %}
+        // product list sayfasında fiyat filtresi yapan fonksiyon
+        $("#filter-btn").click(function() {
+        {#   set span values from min max values bunu sayfa yüklenince yapmak lazım #}
+
+         {#  get span and other values  #}
+         var lower_set_value = $("#skip-value-lower").text();
+         var upper_set_value =  $("#skip-value-upper").text();
+         var category_id = ""
+
+            {#  set input values  #}
+         $("#skip-value-lower-input").val(lower_set_value);
+         $("#skip-value-upper-input").val(upper_set_value);
+
+        {#  seçili kategori varsa kategori id'lerini de set etmek gerek #}
+        {#  artı ilave başka filterlar varsa onları da set et. #}
+});
+        // quick view modal
+        $('#quick-view-modal').on('show.bs.modal', function (event) {
+
+        var button = $(event.relatedTarget); // Button that triggered the modal
+        var title = button.data('title'); // Extract info from data-* attributes
+        var description = button.data('description');
+        var price = button.data('price');
+        var saleprice = button.data('saleprice');
+        var url = button.data('url');
+        var imagehd = button.data('imagehd');
+        var imagesd = button.data('imagesd');
+        var imagemedium = button.data('imagemedium');
+        var imagemicro = button.data('imagemicro');
+        var category = button.data('category');
+        var category_url = button.data('category_url');
+
+  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or
+  // other methods instead.
+
+        var modal = $(this);
+        modal.find('.modal-product-title').text(title);
+        modal.find(".modal-product-description").text(description);
+        modal.find('.view-product-details').attr("href", url);
+        modal.find('.simpleLens-big-image').attr("src", imagemedium);
+        modal.find('.simpleLens-lens-image').attr('data-lens-image', imagehd);
+{#        modal.find('.simpleLens-thumbnail-wrapper').attr('data-lens-image', imagemedium);#}
+{#        modal.find('.simpleLens-thumbnail-wrapper').attr('data-big-image', imagemedium);#}
+{#        modal.find('.simpleLens-thumbnail-wrapper').attr('src', imagemedium);#}
+        modal.find('.category-url').attr("href", category_url);
+        modal.find(".category-url").text(category);
+
+        if (saleprice > 0){
+
+            var element = modal.find('.aa-product-view-price');
+            element.text('');
+            var spansale = document.createElement("span");
+            var nodesale = document.createTextNode(saleprice + ' ,-₺ ');
+            spansale.appendChild(nodesale);
+            element[0].appendChild(spansale);
+
+            var spanprice = document.createElement("span");
+            var del = document.createElement("del");
+            var nodeprice = document.createTextNode(price + ' ,-₺ ');
+            del.appendChild(nodeprice);
+            spanprice.appendChild(del);
+            element[0].appendChild(spanprice);
+
+        }else{
+            //console.log("burası çalışmamalı");
+            modal.find('.aa-product-view-price').text(price + ' ,-₺ ');
+        }
+
+
+});
+    {% endblock %}
+</script>
+
+
 {% block content %}
 
 <!-- catg header banner section -->
@@ -112,7 +189,19 @@
 {#{% block subscribe %}#}
 {#    {% include '_subscribe_section.html' with form=signup_form %}#}
 {#{% endblock %}#}
-
-{% block jquery %}
-
+{% block custom_javascripts %}
+    <!-- SmartMenus jQuery plugin -->
+    <script type="text/javascript" src="{% static 'js/jquery.smartmenus.js' %}"></script>
+    <!-- SmartMenus jQuery Bootstrap Addon -->
+    <script type="text/javascript" src="{% static 'js/jquery.smartmenus.bootstrap.js' %}"></script>
+    <!-- To Slider JS  -->
+    {#<script src="{% static 'js/sequence.js' %}"></script>#}
+    {#<script src="{% static 'js/sequence-theme.modern-slide-in.js' %}"></script>#}
+    <!-- Product view slider -->
+    <script type="text/javascript" src="{% static 'js/jquery.simpleGallery.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.simpleLens.js' %}"></script>
+    {#<!-- slick slider / alttaki benzer ürünleri kaydırıyor -->#}
+    <script type="text/javascript" src="{% static 'js/slick.js' %}"></script>
+    {#<!-- Price picker slider -->#}
+    <script type="text/javascript" src="{% static 'js/nouislider.js' %}"></script>
 {% endblock %}
