--- a/app/templates_for_new_theme/products/_single_product.html
+++ b/app/templates_for_new_theme/products/_single_product.html
@@ -11,8 +11,12 @@
         </a>
         {% endif %}
         {# aşağıya id değeri veremiyoruz. çünkü aynı id'den bir sürü oluyor.  #}
-        <a class="aa-add-card-btn" href="#"><span
-                class="fa fa-shopping-cart"></span>Sepete At</a>
+
+{#            <input type="hidden" name='item' value='{{ product.variation_set.first.id }}'/>#}
+{#            <input type="hidden" class='form-control' type='number' name='qty' value='1'/>#}
+        <a class="aa-add-card-btn" href="#" data-productid="{{ product.variation_set.first.id }}">
+            <span class="fa fa-shopping-cart"></span>Sepete At</a>
+
         <figcaption>
             <h4 class="aa-product-title"><a href="{{ product.get_absolute_url }}">{{ product.title }}</a></h4>
             {% if product.variation_set.first.sale_price %}
