javascript fonksiyonu düzeltildi.

--- a/app/templates_for_new_theme/home.html
+++ b/app/templates_for_new_theme/home.html
@@ -100,8 +100,8 @@
 
         });
 
-
-        $('.aa-add-card-btn').click( function(e, productid) {
+        // bu anasayfadaki herhangi bir ürüne tıklandığında çalışan fonksiyon...
+        $('.aa-add-card-btn').click( function(e) {
             e.preventDefault();
             var product_id = this.dataset['productid'];
 
