--- a/app/templates_for_new_theme/home.html
+++ b/app/templates_for_new_theme/home.html
@@ -53,193 +53,8 @@
     {% include '_subscribe_section.html' with form=form %}
 {% endblock %}
 
-<script>
-    {% block jquery %}
-        function setPrice() {
-            var price = $(".variation_select option:selected").attr("data-price");
-
-            var sale_price = $(".variation_select option:selected").attr("data-sale-price");
-            if (sale_price != "" && sale_price != "None" && sale_price != null) {
-                $("#price").html("<h3>" + sale_price + " <small class='og-price'>" + price + "</small></h3>");
-            } else {
-                $("#price").html(price);
-            }
-        }
-        setPrice();
-
-        $(".variation_select").change(function () {
-            console.log("set_Price çalıştı.")
-            setPrice();
-
-            // var img = $(".variation_select option:selected").attr("data-img")
-            // $("img").attr("src", img);
-
-        });
-
-        // ajax add to cart
-        $("#submit-btn").click(function (event) {
-            event.preventDefault();
-            var formData = $("#add-form").serialize();
-            console.log(formData);
-            $.ajax({
-                type: "GET", // "POST"
-                url: "{% url 'cart' %}",
-                data: formData,
-                success: function (data) {
-                    showFlashMessage(data.flash_message);
-                    updateCartItemCount();
-                },
-                error: function (response, error) {
-                    // console.log(response)
-                    // console.log(error)
-                    $("#add-form").submit()
-                }
-            });
-
-            // $("#add-form").submit()
-
-        });
-
-        // bu anasayfadaki herhangi bir ürüne tıklandığında çalışan fonksiyon...
-        $('.aa-add-card-btn').click( function(e) {
-            e.preventDefault();
-            var product_id = this.dataset['productid'];
-
-            $.ajax({
-                type: "GET", // "POST"
-                url: "{% url 'cart' %}",
-                data: "item=" + product_id + "&qty=" + 1,
-                success: function (data) {
-                    showFlashMessage(data.flash_message);
-                    updateCartItemCount();
-                },
-                error: function (response, error) {
-                    // console.log(response)
-                    // console.log(error)
-                    $("#add-form").submit(); //bu çalışmaz
-                }
-            });
-            return false;
-        } );
-
-
-
-        // quick view modal
-        $('#quick-view-modal').on('show.bs.modal', function (event) {
-
-            var button = $(event.relatedTarget); // Button that triggered the modal
-            var title = button.data('title'); // Extract info from data-* attributes
-            var description = button.data('description');
-            var price = button.data('price');
-            var saleprice = button.data('saleprice');
-            var url = button.data('url');
-            var imagehd = button.data('imagehd');
-            var imagesd = button.data('imagesd');
-            var imagemedium = button.data('imagemedium');
-            var imagemicro = button.data('imagemicro');
-            var category = button.data('category');
-            var category_url = button.data('category_url');
-            var variation_set = button.data('variation_set');
-
-{#            console.log("I am printing variations");#}
-{#            console.log(variation_set[0]);#}
-{#            console.log(variation_set[0].fields.title);#}
-{#            console.log(variation_set[0].fields.pk);#}
-{#            console.log(variation_set[0].fields.price);#}
-{#            console.log(variation_set[0].fields.sale_price);#}
-{#            $.each(variation_set, function(key, value) {#}
-{#                console.log(key, value);#}
-{#                console.log(key);#}
-{#            });#}
-
-            //obj.employees[1].firstName
-{#            $.each(variation_set, function(key,value) {#}
-{#              $el.append($("<option></option>")#}
-{#                 .attr("value", value).text(key));#}
-{#                console.log()#}
-{#                console.log(key);#}
-{#                console.log(value);#}
-{#            });#}
-
-
-  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or
-  // other methods instead.
-
-        var modal = $(this);
-            modal.find('.modal-product-title').text(title);
-            modal.find(".modal-product-description").text(description);
-            modal.find('.view-product-details').attr("href", url);
-            modal.find('.simpleLens-big-image').attr("src", imagemedium);
-            modal.find('.simpleLens-lens-image').attr('data-lens-image', imagehd);
-    {#        modal.find('.simpleLens-thumbnail-wrapper').attr('data-lens-image', imagemedium);#}
-    {#        modal.find('.simpleLens-thumbnail-wrapper').attr('data-big-image', imagemedium);#}
-    {#        modal.find('.simpleLens-thumbnail-wrapper').attr('src', imagemedium);#}
-            modal.find('.category-url').attr("href", category_url);
-            modal.find(".category-url").text(category);
-
-        var $el = modal.find('.variation_select');
-        $el.empty(); // remove old options
-        $.each(variation_set, function(key,value) {
-{#          console.log(value.fields.pk)#}
-
-            if (value.fields.sale_price > 0){
-                $sale_price = value.fields.sale_price;
-            }
-            $el.append($("<option></option>")
-                .attr("value", value.pk).text(value.fields.title)
-                .attr("data-price", value.fields.price)
-                .attr("data-sale-price", value.fields.sale_price || "None"));
-
-        });
-
-
-
-
-
-        if (saleprice > 0){
-
-            var element = modal.find('.aa-product-view-price');
-            element.text('');
-            var spansale = document.createElement("span");
-            var nodesale = document.createTextNode(saleprice + ' ,-₺ ');
-            spansale.appendChild(nodesale);
-            element[0].appendChild(spansale);
-
-            var spanprice = document.createElement("span");
-            var del = document.createElement("del");
-            var nodeprice = document.createTextNode(price + ' ,-₺ ');
-            del.appendChild(nodeprice);
-            spanprice.appendChild(del);
-            element[0].appendChild(spanprice);
-
-        }else{
-            //console.log("burası çalışmamalı");
-            modal.find('.aa-product-view-price').text(price + ' ,-₺ ');
-        }
-
-
-});
-
-
-    {% endblock %}
-</script>
-
-{% block custom_javascripts %}
-<!-- SmartMenus jQuery plugin -->
-<script type="text/javascript" src="{% static 'js/jquery.smartmenus.js' %}"></script>
-<!-- SmartMenus jQuery Bootstrap Addon -->
-<script type="text/javascript" src="{% static 'js/jquery.smartmenus.bootstrap.js' %}"></script>
-<!-- To Slider JS -->
-<script src="{% static 'js/sequence.js' %}"></script>
-<script src="{% static 'js/sequence-theme.modern-slide-in.js' %}"></script>
-<!-- Product view slider -->
-<script type="text/javascript" src="{% static 'js/jquery.simpleGallery.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/jquery.simpleLens.js' %}"></script>
-<!-- slick slider -->
-<script type="text/javascript" src="{% static 'js/slick.js' %}"></script>
-<!-- Price picker slider -->
-<script type="text/javascript" src="{% static 'js/nouislider.js' %}"></script>
+{% block jquery %}
+{% include 'javascript.js' %}
 {% endblock %}
 
 
