--- a/app/templates_for_new_theme/orders/_order_summary_short.html
+++ b/app/templates_for_new_theme/orders/_order_summary_short.html
@@ -1,4 +1,5 @@
-<p class='lead'>
+
+<p class='lead' xmlns="http://www.w3.org/1999/html">
     Order {% if order.order_id %}#{{ order.order_id }}{% endif %} Summary</p>
 
 <table class='table'>
@@ -26,7 +27,7 @@
 
 
 </table>
-</div>
+
 
 <div class='col-sm-4 col-sm-offset-4 text-center'>
 
@@ -38,3 +39,5 @@
         <br/>
         {{ order.shipping_address.get_address }}
     <p>
+</div>
+
