database 'i sıfırladım, ve 3 kademede migrate ettim...

--- a/app/templates_for_new_theme/carts/view.html
+++ b/app/templates_for_new_theme/carts/view.html
@@ -1,6 +1,10 @@
 {% extends "__base.html" %}
 {% load staticfiles %}
 
+{% block messages %}
+    {% include '_messages.html' %}
+{% endblock %}
+
 <script>
     {% block jquery %}
         $(".item-qty").change(function () {
