--- a/app/templates_for_new_theme/orders/order_list.html
+++ b/app/templates_for_new_theme/orders/order_list.html
@@ -3,7 +3,9 @@
 
 
 {% block content %}
-
+{% block messages %}
+    {% include '_messages.html' %}
+{% endblock %}
 
     {% if object_list|length <= 0 %}
 
