--- a/app/templates_for_new_theme/carts/checkout_view.html
+++ b/app/templates_for_new_theme/carts/checkout_view.html
@@ -2,23 +2,27 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 
+{% block messages %}
+    {% include '_messages.html' %}
+{% endblock %}
 
 <script>
     {% block jquery %}
-        var clientToken = "{{ client_token }}";
 
-        braintree.setup(clientToken, "dropin", {
-            container: "payment-form"
-        });
-
-
+{#        Paynet.onPaymentClick(function () {#}
+{#          if (true) {#}
+{#            alert("True.");#}
+{#            return true; //Gömülü form ödeme ekranı açılır.#}
+{#          }else {#}
+{#            alert("Uyarı.");#}
+{#            return false;    //Gömülü form ödeme ekranı açılmaz.#}
+{#         }#}
+{#    });#}
 
     {% endblock %}
 </script>
 
 {% block content %}
-
-
 
 
     {% if not user_can_continue %}
@@ -67,8 +71,7 @@
                     type="text/javascript"
                     src="https://pts-pj.paynet.com.tr/public/js/paynet.min.js"
                     data-key="pbk_pcs_TipCY8rx00hQAICpfn2lR52H9cyTa3sV"
-                    data-amount="{{ order.order_total }}"
-                    data-ratio_code="oran kodunuz var ise"
+                    data-amount="{{ order.paynet_order_total }}"
                     data-button_label="Ödeme Yap"
                     data-image="[image_url]">
                 </script>
