--- a/app/templates_for_new_theme/orders/address_select.html
+++ b/app/templates_for_new_theme/orders/address_select.html
@@ -1,6 +1,10 @@
 {% extends "__base.html" %}
 {% load crispy_forms_tags %}
 
+{% block messages %}
+    {% include '_messages.html' %}
+{% endblock %}
+
 {% block content %}
 
     <div class='col-sm-4 col-sm-offset-4 text-center'>
