Your cart türkçeleşti.

--- a/app/templates_for_new_theme/carts/view.html
+++ b/app/templates_for_new_theme/carts/view.html
@@ -80,7 +80,7 @@
 
             <div class='col-sm-8 col-sm-offset-2'>
 
-                <h1>Your cart</h1>
+                <h1>Sepetinizdeki Ürünler</h1>
                 <table class='table'>
 
 
