Cart adımları Türkçeleştirmeleri

--- a/app/templates_for_new_theme/orders/address_select.html
+++ b/app/templates_for_new_theme/orders/address_select.html
@@ -1,15 +1,11 @@
 {% extends "__base.html" %}
 {% load crispy_forms_tags %}
 
-{% block messages %}
-    {% include '_messages.html' %}
-{% endblock %}
-
 {% block content %}
-
+    <div class="row">
     <div class='col-sm-4 col-sm-offset-4 text-center'>
         <p class='lead'>
-            Select your addresses for this order.
+            Lütfen siparişiniz için adres seçin.
         </p>
         <form method="POST" action=''>{% csrf_token %}
 
@@ -17,10 +13,11 @@
             {{ form|crispy }}
 
 
-            <input class='btn btn-default' type='submit' value='Select'/>
-            <a class='btn btn-link' href='{% url "user_address_create" %}'>Add new</a>
+            <input class='btn btn-primary btn-block' type='submit' value='Seç'/>
+            <a class='btn btn-link' href='{% url "user_address_create" %}'>Yeni adres ekle</a>
 
         </form>
 
+    </div>
     </div>
 {% endblock %}
