--- a/app/templates_for_new_theme/carts/view.html
+++ b/app/templates_for_new_theme/carts/view.html
@@ -82,53 +82,41 @@
 
                 <h1>Sepetinizdeki Ürünler</h1>
                 <table class='table'>
-
-
                     {% for item in object.cartitem_set.all %}
 
                         <tr id='item-{{ item.item.id }}'>
 
                             <td>{{ item.item.get_title }}</td>
-
-
                             <td>
-                                <form action="." method="GET"><input type='hidden' name='item'
-                                                                     value='{{ item.item.id }}'/><input type='number'
-                                                                                                        class='item-qty'
-                                                                                                        name='qty'
-                                                                                                        value='{{ item.quantity }}'/><input
-                                        type='submit' class='btn-update btn btn-link' value='Update item'
-                                        style='display:none;'/></form>
+                                <form action="." method="GET"><input type='hidden' name='item' value='{{ item.item.id }}'/>
+                                    <input type='number' class='item-qty' name='qty' value='{{ item.quantity }}'/>
+                                    <input type='submit' class='btn-update btn btn-link' value='Update item'
+                                        style='display:none;'/>
+                                </form>
                             </td>
                             <td id='item-line-total-{{ item.item.id }}'>{{ item.line_item_total }}</td>
-                            <td class='text-right'><a href='{{ item.remove }}'>X</a>
-
-
-                            </td>
-
-
+                            <td class='text-right'><a href='{{ item.remove }}'>X</a></td>
                         </tr>
 
                     {% endfor %}
 
-
                     <tr>
-                        <td colspan='4' class='text-right'>Subtotal: <span id='subtotal'>{{ object.subtotal }}</span>
+                        <td colspan='4' class='text-right'>KDV 'siz Toplam : <span id='subtotal'>{{ object.subtotal }}</span>
                         </td>
                     </tr>
 
                     <tr>
-                        <td colspan='4' class='text-right'>Tax (Estimated): <span
-                                id='taxtotal'>{{ object.tax_total }}</span></td>
+                        <td colspan='4' class='text-right'>KDV : <span id='taxtotal'>{{ object.tax_total }}</span></td>
                     </tr>
 
                     <tr>
-                        <td colspan='4' class='text-right'>Total: <span id='carttotal'>{{ object.total }}</span></td>
+                        <td colspan='4' class='text-right'>Toplam : <span id='carttotal'>{{ object.total }}</span></td>
                     </tr>
 
 
                     <tr>
-                        <td colspan='4' class='text-right'><a class='btn btn-warning' href="{% url 'checkout' %}">Checkout </a>
+                        <td colspan='4' class='text-right'>
+                            <a class='btn btn-warning' href="{% url 'checkout' %}">Alışverişi Tamamla</a>
                         </td>
                     </tr>
 
