--- a/app/templates_for_new_theme/forms.html
+++ b/app/templates_for_new_theme/forms.html
@@ -13,8 +13,9 @@
 
             <form method='POST' action=''>{% csrf_token %}
                 {{ form|crispy }}
-                <input class='btn btn-default' type='submit' value='Submit'/>
+                <input class='btn btn-primary btn-block' type='submit' value='Tamam'/>
             </form>
         </div>
     </div>
+    <div class="row" style="height: 5em"></div>
 {% endblock %}
