--- a/app/templates_for_new_theme/orders/order_detail.html
+++ b/app/templates_for_new_theme/orders/order_detail.html
@@ -1,15 +1,11 @@
 {% extends "__base.html" %}
-{% block messages %}
-    {% include '_messages.html' %}
-{% endblock %}
+
 
 
 {% block content %}
 
-    {% include "orders/_order_summary_short.html" with order=order %}
+    {% include "orders/order_summary_short.html" with order=order %}
 
-    <p><b>Please print for your records</b></p>
-
-
+    <p><b>Lütfen saklamak için yazdırın.</b></p>
 {% endblock %}
 
